--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,19 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<servlet>
+		<servlet-name>member</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/config/member-servlet.xml</param-value>
+		</init-param>
+		</servlet>
+		<servlet-mapping>
+			<servlet-name>member</servlet-name>
+			<url-pattern>*.me</url-pattern>
+		</servlet-mapping>
+	
 
 	<!-- 한글 깨짐 방지 인코딩처리 -->
 	<filter>
