--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,20 @@
 			<servlet-name>member</servlet-name>
 			<url-pattern>*.me</url-pattern>
 		</servlet-mapping>
-	
+
+
+		<servlet>
+		<servlet-name>board</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/config/board-servlet.xml</param-value>
+		</init-param>
+		</servlet>
+		<servlet-mapping>
+			<servlet-name>board</servlet-name>
+			<url-pattern>*.bo</url-pattern>
+		</servlet-mapping>
 
 	<!-- 한글 깨짐 방지 인코딩처리 -->
 	<filter>
