--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>4.2.3.RELEASE</version>
 		</dependency>
-		
+
 		<!-- AOP관련 라이브러리 추가 -->
 		<!-- aspectj 런타임 라이브러리 추가 -->
 		<!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
@@ -256,8 +256,28 @@
 			<artifactId>json-lib-ext-spring</artifactId> <!-- ajax식으로 돌려주게 하는 설정을 member-servlet에서 해야함. -->
 			<version>1.0.2</version>
 		</dependency>
-		
-		
+
+		<!-- 이메일 인증 기능 -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.3.8.RELEASE</version>
+        </dependency>
+ 
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mail</artifactId>
+            <version>4.3.8.RELEASE</version>
+        </dependency>
+
+
+
+
 
 	</dependencies>
 	<build>
