--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,19 @@
 
 
 		<servlet>
+		<servlet-name>mypage</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/config/mypage-servlet.xml</param-value>
+		</init-param>
+		</servlet>
+		<servlet-mapping>
+			<servlet-name>mypage</servlet-name>
+			<url-pattern>*.mp</url-pattern>
+		</servlet-mapping>
+
+		<servlet>
 		<servlet-name>board</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
